<resources>
    <string name="app_name">OPS</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_shop">ShopActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
